# 4

./: README.md  config.py  main.py  pyproject.toml
src/: dialogue.py
src/cache_json/: cache_hh.json  cache_sj.json
src/data_json/: work_with_json.py
src/request/: api.py
src/vacancy/: vacancy.py
