[tool.poetry]
name = "four"
version = "0.1.0"
description = ""
authors = ["Nikita <nikita.isaev2001@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
black = "^23.11.0"
mypy = "^1.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
